# selfie_f1tenth2019

./: .gitignore  .gitmodules  LICENSE  README.md  SelfieGeneticAlgorithmV3 — skrót .lnk  data.csv  gputimer.h  kernel.cu
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/scripts/: keyboard_control.py
keyboard_control/src/: keyboard_control.py
laptime_measurer/: CMakeLists.txt  package.xml
laptime_measurer/scripts/: laptime_measurer
model_cmd_converter/: CMakeLists.txt  package.xml
model_cmd_converter/src/: model_cmd_converter.cpp
mpc/: CMakeLists.txt  README.md  change_y_sign.py  mapChanged.pkl
mpc/include/: cppad_spline.hpp
mpc/launch/: 2135loncz.launch  race-sim-mpc.launch  selfie-mpc.launch  spline-mpc.launch
mpc/scripts/: calc_path_coefs.py  calc_trajectory_coefs.py  calibration.py
mpc/src/: PolyFit.cpp  PolyFit.h  fg_eval.cpp  fg_eval.h  mpc.cpp  mpc.h  mpc_node.cpp  solver.cpp  solver.h
offset_calculator/: CMakeLists.txt  README.md  package.xml
offset_calculator/src/: offset_calculator.cpp
offset_combiner/scripts/: offset_combiner.py
path_extractor/: README.md
path_extractor/scripts/: path_extractor.py  test_path_creator.py  test_position_publisher.py
path_server/scripts/: path_server
performance_monitor/: CMakeLists.txt  data.csv  package.xml
performance_monitor/data/: Untitled.ipynb  angle_data.csv  speed_angle_ratio_data.csv  speed_setpoint_data.csv  speed_turn_measurements - Arkusz1.csv  wyznaczanie_f(s) - Arkusz1.csv  wyznaczenie_vr.csv
performance_monitor/data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
performance_monitor/launch/: compensate.launch  monitor.launch
performance_monitor/scripts/: calibration.py  delta_compensator.py  performance_monitor.py  speed_data.csv
selfie_control/: CMakeLists.txt
selfie_description/: CMakeLists.txt  package.xml
selfie_description/description_files/urdf/: macros.xacro  racecar.xacro
selfie_description/launch/: selfie_description.launch
selfie_genetic/: CMakeLists.txt  package.xml
selfie_genetic/src/: gputimer.h  kernel.cu
selfie_launch/launch/: mapping.launch  multimaster.launch  race-base.launch  race-sim-mpc.launch  selfie-base.launch  selfie-pid.launch  selfie-simulator-base.launch  selfie.launch
selfie_launch/launch/control/: mpc.launch
selfie_launch/launch/subsystems/: hardware.launch  lidars.launch  pid.launch  transforms.launch
selfie_manager/: CMakeLists.txt  package.xml  plugin.xml  setup.py
selfie_manager/scripts/: session_manager
selfie_manager/src/session_manager/: session_manager.py
selfie_mapping/: README.md
selfie_mapping/launch/: fast_mapping_1lidar.launch  fast_mapping_2lidar.launch  gmapping.launch  mapping_viz.launch  selfie_2d_mapping.launch  viz_mapping_1lidar.launch  viz_mapping_2lidar.launch
selfie_msgs/: CMakeLists.txt  package.xml
selfie_msgs/msg/: ModelControl.msg  Obstacle.msg  Points.msg
selfie_offset_calc/: CMakeLists.txt  README.md  package.xml
selfie_simulator/: README.md
selfie_simulator/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro
selfie_simulator/ackermann_vehicle_gazebo/scripts/: ackermann_controller  map_to_baselink_pub.py  pub.txt  (+1 more)
selfie_simulator/gazebo_plugin/: CMakeLists.txt  package.xml
selfie_simulator/gazebo_plugin/launch/: hello.launch
selfie_simulator/gazebo_plugin/src/: simple_world_plugin.cpp
selfie_simulator/gazebo_plugin/worlds/: hello.world
selfie_stm32_bridge/src/: usb_node.cpp
selfie_vision/: README.md
selfie_vision/points_publisher/: CMakeLists.txt  package.xml
speed_controller/: README.md
speed_controller/src/: main.cpp
(+2 files in other folders)
