<?xml version="1.0"?>
<package format="2">
  <name>laptime_measurer</name>
  <version>0.0.0</version>
  <description>The laptime_measurer package</description>

  <maintainer email="gotlib.adam@gmail.com">Adam Gotlib</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
